--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,5 @@ jobs:
     - run: pm2 link 996682rafbnpru8 dog1hlch91lfdh4
     - run: pm2 start index.js
     - run: pm2 save
-    - run: pm2 log build --if-present
-    - run: pm2 log
+    - run: npm start build --if-present
+    - run: npm start
